# TOB-

./: .gitignore  README.md  diagram.mmd
.github/workflows/: deploy-pages.yml  omni-sim-ci.yml  skillquest-ci.yml
SkillQuest/: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  showcase-brochure.html  showcase.html  turbo.json
SkillQuest/.github/workflows/: ci.yml
SkillQuest/apps/api/: package.json  tsconfig.json
SkillQuest/apps/api/prisma/: schema.prisma  seed-gamification.ts  seed.ts
SkillQuest/apps/api/prisma/migrations/20260411_init/: migration.sql
SkillQuest/apps/api/prisma/migrations/20260420_add_gamification/: migration.sql
SkillQuest/apps/api/src/: app.module.ts  main.ts  prisma.service.ts
SkillQuest/apps/api/src/common/middleware/: tenant-context.middleware.ts
SkillQuest/apps/api/src/modules/ai/: ai-settings.controller.ts  ai-settings.service.ts  ai.module.ts  providers.config.ts  unified-ai.service.ts
SkillQuest/apps/api/src/modules/ai-budget/: ai-budget.controller.ts  ai-budget.module.ts  ai-budget.service.ts
SkillQuest/apps/api/src/modules/analytics/: analytics.controller.ts  analytics.module.ts  analytics.service.ts
SkillQuest/apps/api/src/modules/audit/: audit.controller.ts  audit.module.ts  audit.service.ts
SkillQuest/apps/api/src/modules/auth/: auth.controller.ts  auth.guard.ts  auth.module.ts  auth.service.ts  roles.guard.ts  tenant.guard.ts
SkillQuest/apps/api/src/modules/badge/: badge.controller.ts  badge.module.ts  badge.service.ts
SkillQuest/apps/api/src/modules/course/: ai-generator.service.ts  course.controller.ts  course.module.ts  course.service.ts  document-parser.service.ts  mineru-bridge.service.ts  question-validator.service.ts  (+1 more)
SkillQuest/apps/api/test/: auth.e2e-spec.ts  auth.service.spec.ts  health.e2e-spec.ts
SkillQuest/apps/web/: eslint.config.mjs  next.config.js  package.json  tailwind.config.js  tsconfig.json
SkillQuest/apps/web/src/app/: globals.css  layout.tsx  page.tsx
SkillQuest/apps/web/src/components/: ProtectedRoute.tsx
SkillQuest/apps/web/src/hooks/: useApiData.ts  useCourseId.ts
SkillQuest/apps/web/src/lib/: api-client.ts  auth-context.tsx  replay-utils.ts  tenant-config.ts
SkillQuest/docs/: ARCHITECTURE.md  COMPLIANCE.md  DEPLOYMENT.md  OPERATIONS.md  SCALING.md  SECURITY.md  TROUBLESHOOTING.md  spark-integration.md
SkillQuest/infra/: Dockerfile.ai  Dockerfile.api  Dockerfile.web  docker-compose.yml
SkillQuest/infra/nginx/: default.conf
SkillQuest/services/ai-engine/: config.py  main.py  package.json  pyproject.toml
SkillQuest/services/ai-engine/analyzers/: __init__.py  structure_analyzer.py
SkillQuest/services/ai-engine/generators/: direct_level_factory.py  flow_sim_factory.py  mermaid_to_flow_sim.py  otlp_trace_replay.py  question_generator.py  topology_extractor.py
SkillQuest/services/ai-engine/parsers/: __init__.py  material_parser.py
SkillQuest/services/ai-engine/rag/: __init__.py  bm25.py  chunker.py  embedder.py  retriever.py
SkillQuest/services/ai-engine/tests/: test_analyzer.py  test_flow_sim.py  test_parser.py  test_question_generator.py  test_rag.py
docs/: screenshots.md
docs/screenshots/: README.md
game20_extracted/omni-sim/: README.md
game20_extracted/omni-sim/.github/workflows/: ci.yml
game20_extracted/omni-sim/crates/omni-sim-core/: Cargo.toml
game20_extracted/omni-sim/crates/omni-sim-core/src/: lib.rs  scheduler.rs
game20_extracted/omni-sim/crates/omni-sim-core/src/systems/: lifecycle_system.rs  telemetry_system.rs
game20_extracted/omni-sim/crates/omni-sim-ffi/: Cargo.toml
game20_extracted/omni-sim/crates/omni-sim-ffi/src/: memory.rs
game20_extracted/omni-sim/crates/omni-sim-headless/: Cargo.toml
game20_extracted/omni-sim/crates/omni-sim-headless/src/: main.rs
game20_extracted/omni-sim/crates/omni-sim-opdl/: Cargo.toml
game20_extracted/omni-sim/crates/omni-sim-opdl/src/: compiler.rs  components_stub.rs  ir.rs  lib.rs  schema.rs  validator.rs
game20_extracted/omni-sim/crates/omni-sim-telemetry/src/: buffer.rs  ws_server.rs
game20_extracted/omni-sim/tests/bench/: bench_ecs.rs
game20_extracted/omni-sim/tests/integration/: test_state_hash.rs  test_world_load.rs
omni-sim/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
omni-sim/.github/workflows/: ci.yml
omni-sim/crates/omni-sim-core/: Cargo.toml
omni-sim/crates/omni-sim-core/benches/: bench_ecs.rs
omni-sim/crates/omni-sim-core/src/: lib.rs  scheduler.rs
omni-sim/crates/omni-sim-core/src/systems/: mod.rs  network_system.rs  telemetry_system.rs
omni-sim/crates/omni-sim-core/tests/integration/: test_state_hash.rs  test_world_load.rs
omni-sim/crates/omni-sim-ffi/src/: exports.rs  lib.rs  memory.rs
omni-sim/crates/omni-sim-headless/: Cargo.toml
omni-sim/crates/omni-sim-headless/src/: main.rs
omni-sim/crates/omni-sim-opdl/src/: compiler.rs  components_stub.rs  ir.rs  lib.rs  schema.rs  validator.rs
omni-sim/crates/omni-sim-telemetry/: Cargo.toml
omni-sim/crates/omni-sim-telemetry/src/: buffer.rs  lib.rs  sampler.rs  ws_server.rs
omni-sim/deploy/: entrypoint.sh  nginx.conf  setup.sh
omni-sim/unity/Assets/Scripts/Rendering/: EntityMeshPool.cs  HeatmapOverlay.cs  TelemetryRenderer.cs
omni-sim/unity/Assets/Scripts/Runtime/: FfiMemoryBridge.cs  OmniSimRuntime.cs
omni-sim/web-console/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
omni-sim/web-console/src/: client.ts  dashboard.ts  main.ts  mock.ts  router.ts  style.css  telemetry.ts  types.ts
omni-sim/web-console/src/pages/: about.ts  alerts.ts  dashboard.ts  entity-detail.ts  packs.ts  settings.ts  simulation.ts
omni-sim/web-console/test/: telemetry.test.ts
(+141 files in other folders)
