[workspace]
resolver = "2"

members = [
    "crates/omni-sim-core",
    "crates/omni-sim-opdl",
    "crates/omni-sim-ffi",
    "crates/omni-sim-telemetry",
    "crates/omni-sim-headless",
]

[workspace.dependencies]
hecs        = "0.10"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
blake3      = "1"
thiserror   = "1"
anyhow      = "1"
tokio       = { version = "1", features = ["full"] }
tungstenite = "0.21"
criterion   = { version = "0.5", features = ["html_reports"] }
proptest    = "1"

[profile.release]
opt-level   = 3
lto         = true      # link-time optimisation — smaller + faster Wasm
codegen-units = 1
panic       = "abort"   # required for Wasm: no unwinding runtime
