[project]
name = "skillquest-ai-engine"
version = "0.1.0"
description = "SkillQuest AI Engine — PDF/PPT解析 + LLM题目生成 + 拓扑图识别"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.14.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
